[package]
name = "tcp_sessions"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
bytes = "1.3.0"
tokio = { version = "*", features = ["full"] }
tokio-util = "0.7.4"
encoding = "0.2.33"